added links to eg notebook

--- a/examples/two_dimensional_scattering.ipynb
+++ b/examples/two_dimensional_scattering.ipynb
@@ -36,10 +36,25 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5964991e",
+   "metadata": {},
+   "source": [
+    "## Setting up the problem\n",
+    "In this notebook, we will model plane wave scattering by a fractal obstacle $\\Gamma$. Specifically, $\\Gamma$ is the attractor of an [iterated function system](https://en.wikipedia.org/wiki/Iterated_function_system).\n",
+    "\n",
+    "We seek a solution $u$ of:\n",
+    "$$\n",
+    "(\\Delta+k^2)u = 0, \\quad\n",
+    "$$\n",
+    "where $u=-u^i$ on $\\Gamma$ and satisfies the [SRC](https://en.wikipedia.org/wiki/Sommerfeld_radiation_condition)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "08031287",
    "metadata": {},
    "source": [
-    "Model incident plane wave $u^i(x) = \\mathrm{e}^{\\mathrm{i}k d\\cdot x}$,"
+    "Incident plane wave $u^i(x) = \\mathrm{e}^{\\mathrm{i}k d\\cdot x}$,"
    ]
   },
   {
@@ -56,16 +71,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39ea7fe4",
+   "id": "b3861a72",
    "metadata": {},
    "source": [
-    "Multiple preset fractals are available. Please note: A lot of functionality currently only works for fractals without rotating elements."
+    "Multiple preset fractals are available. Please note: A lot of functionality currently only works for homogenous attractors (all self-similar scales are the same), so please stick to these for now (avoid Koch snowflake, for example)."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "256bf390",
+   "id": "77e0ba51",
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "741013d3",
+   "id": "7e322951",
    "metadata": {},
    "outputs": [
     {
@@ -1239,10 +1254,7 @@
    "id": "c617688c",
    "metadata": {},
    "source": [
-    "Define the right-hand side data:\n",
-    "$$\n",
-    "f(x) = \\exp(\\mathrm{i} k d_1 x),\\quad x\\in\\Gamma\n",
-    "$$"
+    "Next we define the right-hand side data, which depends on if $\\Gamma$ is a [screen](https://link.springer.com/article/10.1007/s00211-024-01399-7), or [not](https://arxiv.org/abs/2309.02184), equivalently the value of the ambient dimension above."
    ]
   },
   {
@@ -1295,11 +1307,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ce624bc",
+   "id": "60061172",
    "metadata": {},
    "source": [
     "## Using custom quadrature for Galerkin integrals (optional)\n",
-    "The above solver uses the barycentre rule by default. Suppose that I want to construct my own quadrature rule. I know about Gauss rules on Cantor sets from Mantica's work. So I can take the cartesian product of two Gauss quadrature rules to construct a quadrature rule for Cantor dust.\n",
+    "The above solver uses [the barycentre rule](https://link.springer.com/article/10.1007/s11075-022-01378-9), by default, to compute the Galerkin inner products inside the system matrix. Suppose that I want to use a different quadrature rule. I know about [Gauss rules on Cantor sets from Mantica's work](https://link.springer.com/article/10.1007/BF02437506). So I can take the cartesian product of two Gauss quadrature rules to construct a quadrature rule for Cantor dust.\n",
+    "\n",
+    "Note that our [routine for singular integrals](https://link.springer.com/article/10.1007/s11075-023-01705-8) requires, as input, a quadrature rule for smooth integrals. Any quadrature rule provided will also be used to calculate the singular integrals.\n",
     "\n",
     "The code below produces this quadrature rule and then overlays the nodes on top of a plot of Cantor dust; the colours correspond to the quadrature weights."
    ]
@@ -1307,7 +1321,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a1624271",
+   "id": "97e7d270",
    "metadata": {},
    "outputs": [
     {
@@ -2557,22 +2571,25 @@
    "source": [
     "import FractalIntegrals: gauss_quadrule, combine_quadrules, QuadStruct\n",
     "\n",
-    "γ = getfractal(\"cantorset\")\n",
-    "xγ, wγ = gauss_quadrule(γ,10)\n",
+    "γ = getfractal(\"cantorset\") # define the Cantor set\n",
+    "xγ, wγ = gauss_quadrule(γ,10) # Mantica's Gauss rule (defaults to Hausdorff measure)\n",
+    "\n",
     "# I can use a function from inside FractalIntegrals to combine the quadrature rules\n",
     "x₁, x₂, w = combine_quadrules(xγ, wγ, xγ, wγ)\n",
-    "x = [[x₁[n], x₂[n]] for n in 1:length(x₁)]\n",
     "scatter(x₁,x₂,zcolor=w,labels=\"\")\n",
     "plot!(Γ)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "9e15fb3c",
+   "execution_count": 21,
+   "id": "889751cf",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# convert to the correct format, outer index corresponding to nodes, inner index corresponding to spatial dimension\n",
+    "x = [[x₁[n], x₂[n]] for n in 1:length(x₁)]\n",
+    "\n",
     "# define a structure describing the quadrature rule\n",
     "Q = QuadStruct(x, w)\n",
     "\n",
