Tweaks to documentation

--- a/docs/src/refs.bib
+++ b/docs/src/refs.bib
@@ -67,3 +67,36 @@
 	DOI = {10.1007/s003659900028},
 	URL = {https://doi.org/10.1007/s003659900028},
 }
+
+@book{Fa:14,
+	AUTHOR = {Falconer, Kenneth},
+	TITLE = {Fractal geometry},
+	EDITION = {Third},
+	NOTE = {Mathematical foundations and applications},
+	PUBLISHER = {John Wiley \& Sons, Ltd., Chichester},
+	YEAR = {2014},
+	PAGES = {xxx+368},
+	ISBN = {978-1-119-94239-9},
+	MRCLASS = {28-01 (11K55 28A78 28A80 37C45 37F10)},
+	MRNUMBER = {3236784},
+	MRREVIEWER = {Manuel\ Mor\'an},
+}
+
+@article{MaVa:07,
+	AUTHOR = {Mantica, Giorgio and Vaienti, Sandro},
+	TITLE = {The asymptotic behaviour of the {F}ourier transforms of
+	orthogonal polynomials. {I}. {M}ellin transform techniques},
+	JOURNAL = {Ann. Henri Poincar\'e},
+	FJOURNAL = {Annales Henri Poincar\'e. A Journal of Theoretical and
+	Mathematical Physics},
+	VOLUME = {8},
+	YEAR = {2007},
+	NUMBER = {2},
+	PAGES = {265--300},
+	ISSN = {1424-0637,1424-0661},
+	MRCLASS = {42C05},
+	MRNUMBER = {2314448},
+	MRREVIEWER = {\'Agota\ P.\ Horv\'ath},
+	DOI = {10.1007/s00023-006-0308-2},
+	URL = {https://doi.org/10.1007/s00023-006-0308-2},
+}
