made integral equatons section, added docs to repo

--- a/docs/src/refs.bib
+++ b/docs/src/refs.bib
@@ -100,3 +100,21 @@
 	DOI = {10.1007/s00023-006-0308-2},
 	URL = {https://doi.org/10.1007/s00023-006-0308-2},
 }
+
+@article{HuWe:04,
+    AUTHOR = {Ruan, Huojun and Su, Weiyi},
+     TITLE = {An approximation method to estimate the {H}ausdorff measure of
+              the {S}ierpinski gasket},
+   JOURNAL = {Anal. Theory Appl.},
+  FJOURNAL = {Analysis in Theory and Applications},
+    VOLUME = {20},
+      YEAR = {2004},
+    NUMBER = {2},
+     PAGES = {158--166},
+      ISSN = {1672-4070,1573-8175},
+   MRCLASS = {28A80 (28A78)},
+  MRNUMBER = {2095458},
+MRREVIEWER = {Antti\ K\"aenm\"aki},
+       DOI = {10.1007/BF02901439},
+       URL = {https://doi.org/10.1007/BF02901439},
+}
